--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 
 <html>
-   <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+  <head>
+    <title>Timestamp Microservice</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
 
-   <body>
-    <h1>Timestamp Microservice</h1>
-    <hr />
-    <div class="container">
-      <h3>Example Usage:</h3>
-      <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
-      </ul>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-      <h3>Example Output:</h3>
-      <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-      </p>
-    </div>
-    <div class="footer">
-      <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
-      </p>
+  <body>
+    <div class="container has-text-centered">
+      <h1 class="title navbar-item is-justify-content-center">
+        Timestamp Microservice
+      </h1>
+      <hr />
+      <img src="clock.png" alt="clock" style="width: 200px" />
+      <div class="block">
+        <div class="block">
+          <h3 class="subtitle">Example Usage:</h3>
+          <ul>
+            <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
+            <li>
+              <a href="api/1451001600000">[project url]/api/1451001600000</a>
+            </li>
+          </ul>
+        </div>
+        <div class="block">
+          <h3 class="subtitle">Example Output:</h3>
+          <p>
+            <code
+              >{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00
+              GMT"}</code
+            >
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <p>By <a href="https://github.com/camilojimenezj">Camilo Jimenez</a></p>
+      </div>
     </div>
   </body>
 </html>
